--- a/views/index.ejs
+++ b/views/index.ejs
@@ -88,7 +88,9 @@
       <div class="input">
         <h2 class="base--h2">Choose Content</h2>
         <p class="base--p input--description">Here are some great use cases for Tone Analyzer. Choose one, or paste your own text.</p>
-        <input role="radio" class="base--radio input--radio" type="radio" id="input-customer-call" name="rb" value="customer-call" checked="true">
+        <input role="radio" class="base--radio input--radio" type="radio" id="twitter" name="rb" value="twitter" checked="true">
+        <label class="base--inline-label input--radio-label" for="twitter">Twitter</label>
+        <input role="radio" class="base--radio input--radio" type="radio" id="input-customer-call" name="rb" value="customer-call">
         <label class="base--inline-label input--radio-label" for="input-customer-call">Customer service chat</label>
         <input role="radio" class="base--radio input--radio" type="radio" id="input-email" name="rb" value="email">
         <label class="base--inline-label input--radio-label" for="input-email">Email message</label>
