--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,11 @@
 
 .search-box {
     margin-top: 20px;
+    vertical-align: center;
+}
+
+.vertical {
+    vertical-align: center;
 }
 
 .graph {
@@ -2456,8 +2461,8 @@ pre[class^="language-"] > code[class^="language-"], pre[class^="language-"] > co
 
 
 .circular {
-	width: 300px;
-	height: 300px;
+	width: 80px;
+	height: 80px;
 	border-radius: 150px;
 	-webkit-border-radius: 150px;
 	-moz-border-radius: 150px;
