--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,10 +18,13 @@
   <header class="_demo--heading">
     <div class="_demo--container">
       <a class="wordmark" href="/">
-        <span class="wordmark--right">Electioin Meter</span>
+        <span class="wordmark--right">Watson Elections</span>
       </a>
 
       <nav class="heading-nav" role="menubar">
+        <li class="base--li heading-nav--li" role="presentation">
+          <a class="heading-nav--item" href="https://domain.com/" role="menuitem">DOMAIN.COM</a>
+        </li>
         <li class="base--li heading-nav--li" role="presentation">
           <a class="heading-nav--item" href="https://developer.ibm.com/watson/" role="menuitem">IBM Watson API</a>
         </li>
@@ -45,9 +48,14 @@
         <div class="banner--service-icon-container"></div>
         <div class="banner--service-info">
           <div class="search-box">
-              <div class="form-inline">
+              <div class="form-inline vertical">
                   <div class="col-sm-10 has-success">
-                      <input type="name" class="form-control input--textbox col-sm-10" style="width:100%" id="search_text" placeholder="donadtrump,bernie,hillary,tedcruz" value="donadtrump,bernie,hillary,tedcruz">
+                      <input type="name" class="form-control input--textbox col-sm-10" style="width:100%;display:none;" id="search_text" placeholder="donadtrump,bernie,hillary,tedcruz" value="donadtrump,bernie,hillary,tedcruz">
+                      <img class="circular" src="/images/bernie-joy.jpg">
+                      <img class="circular" src="/images/hillary-joy.jpg">
+                      <img class="circular" src="/images/kasich-joy.jpg">
+                      <img class="circular" src="/images/tedcruz-joy.jpg">
+                      <img class="circular" src="/images/trump-joy.jpg">
                   </div>
                   <button type="submit" class="btn btn-primary input--submit-button">Search</button>
               </div>
